@@ -1,3 +1,10 @@
+2007-10-10  Jonh Wendell <jwendell@gnome.org>
+
+	* src/vinagre-tab.c,
+	* src/vinagre-window.c,
+	* src/vinagre-notebook.c:
+	  - Adjust scrollbars in fullscreen mode
+
 2007-10-09  Jonh Wendell <jwendell@gnome.org>
 
 	* lots of files:
